0x0C-python-almost_a_circle/output.txt
  File "models/base.py", line 140
    except IOError:
    ^
SyntaxError: invalid syntax
